--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,14 @@
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Created by httpswww.toptal.comdevelopersgitignoreapivue,vuejs
-# Edit at httpswww.toptal.comdevelopersgitignoretemplates=vue,vuejs
-
-### Vue ###
-# gitignore template for Vue.js projects
-#
-# Recommended template Node.gitignore
-
-# TODO where does this rule come from
-docs_book
-
-# TODO where does this rule come from
-test
-
-### Vuejs ###
-# Recommended template Node.gitignore
-
-node_modules
-dist
-npm-debug.log
-yarn-error.log
-
-# End of httpswww.toptal.comdevelopersgitignoreapivue,vuejs
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
