--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "ua-parser-js": "^0.7.21",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
